# tap-mailgun-stats

./: LICENSE  README.md  meltano.yml  pyproject.toml  tox.ini
.github/: CODEOWNERS
tap_mailgun_stats/: __init__.py  __main__.py  client.py  streams.py  tap.py
tests/: __init__.py  test_core.py
